fixed failing auth tests - moving forward