@@ -77,7 +77,8 @@
   :clean-targets ^{:protect false} [:target-path "resources/public/js/out"]
 
   :profiles {:dev
-             {:plugins [[lein-environ "1.0.1"]
+             {:jvm-opts ["-XX:MaxPermSize=128M"]
+              :plugins [[lein-environ "1.0.1"]
                         [lein-ancient "0.6.6"]]
               :dependencies [[org.clojure/tools.nrepl "0.2.10"]
                              [org.clojure/tools.namespace "0.2.11"]
